--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@next-auth/prisma-adapter": "canary",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "5.9.1",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
     "next": "^14.1.0",
     "next-auth": "beta",
     "prisma": "^5.9.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "webpack": "^5.90.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
