--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
     "@next-auth/prisma-adapter": "canary",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "5.9.1",
@@ -25,6 +24,8 @@
     "prisma": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "webpack": "^5.90.1",
     "zod": "^3.22.4"
   },
