--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.2",
     "webpack": "^5.90.1",
     "zod": "^3.22.4"
   },
