--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "canary",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.10.2",
+    "@react-email/components": "0.0.15",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
@@ -24,9 +25,11 @@
     "prisma": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "2.1.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "recharts": "^2.12.2",
+    "resend": "^3.2.0",
     "webpack": "^5.90.1",
     "zod": "^3.22.4"
   },
