--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@prisma/client": "^5.10.2",
     "@react-email/components": "0.0.15",
     "@types/bcryptjs": "^2.4.6",
+    "@vercel/postgres": "^0.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "install": "^0.13.0",
     "next": "^14.1.0",
     "next-auth": "beta",
+    "npm": "^10.5.0",
     "prisma": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
