--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.10.2",
     "@react-email/components": "0.0.15",
     "@types/bcryptjs": "^2.4.6",
+    "@vercel/blob": "^0.22.1",
     "@vercel/postgres": "^0.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
@@ -32,6 +33,7 @@
     "react-email": "2.1.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.12.2",
     "resend": "^3.2.0",
     "webpack": "^5.90.1",
