--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@vercel/blob": "^0.22.1",
     "@vercel/postgres": "^0.7.2",
+    "@vercel/speed-insights": "^1.0.10",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
