--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-email": "2.1.0",
     "react-icons": "^5.0.1",
+    "react-qr-code": "^2.0.12",
     "react-toastify": "^10.0.4",
     "react-webcam": "^7.2.0",
     "recharts": "^2.12.2",
