--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-webcam": "^7.2.0",
     "recharts": "^2.12.2",
     "resend": "^3.2.0",
+    "swr": "^2.2.5",
     "webpack": "^5.90.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
